last 3 remain in ex

--- a/Exercise 3/180631J_A03_EN4720.tex
+++ b/Exercise 3/180631J_A03_EN4720.tex
@@ -239,8 +239,13 @@
 		\item Provide recommendations to enhance the strength of the passwords.
 		
 		\begin{answer}
-			%% TODO: Add answer here
-			Your answer here
+		\begin{itemize}
+			\item When creating a password a combination of numbers, letters (upper case and/or lower case)  and special characters must be used and the password must be sufficiently long to make it stronger.				
+			
+			\item When creating a password common words (such as \textit{soccer, wizard, phantom (found above)  and etc} ) and patterns (such as \textit{123, 12345 and etc} ) must be strictly avoided. As these words can be easily cracked in no time as seen in the above scenario.					
+			
+			\item A password must not contain personal information such as name, birth year and etc. as those can easily be combined to form a candidate set of passwords easily.
+		\end{itemize}
 		\end{answer}
 		
 		\item Briefly explain about ``Rule-based Attack'' and how it uses time and memory for the hash cracking process using a diagram.
