complte ex 3, final revision

--- a/Exercise 3/180631J_A03_EN4720.tex
+++ b/Exercise 3/180631J_A03_EN4720.tex
@@ -284,7 +284,7 @@
 		
 		\begin{answer}
 			
-			Through the rule-based attack, the tool can generate new candidate passwords other than the original password set. This increases the keyspace to 30 passwords from only 6 passwords, which increases the effectiveness of the attack.
+			Through the rule-based attack, the tool can generate new candidate passwords other than the original password set. This increases the keyspace to 30 passwords from only 6 passwords, which increases the effectiveness of the attack. Figure \ref{fig:cracked_with_rules} illustrates that, through the rule-based attack, all the six passwords are cracked, whereas  only one password is cracked through the bare dictionary attack (figure \ref{fig:cracked_with_norules}) .
 			
 			\begin{figure}[h]
 				\centering
