--- a/Exercise 3/180631J_A03_EN4720.tex
+++ b/Exercise 3/180631J_A03_EN4720.tex
@@ -251,8 +251,10 @@
 		\item Briefly explain about ``Rule-based Attack'' and how it uses time and memory for the hash cracking process using a diagram.
 		
 		\begin{answer}
-			While pure dictionary attacks use the bare passwords in a given file, rule-based attacks can generate new candidate passwords using a dictionary of passwords. In order to to do that, password cracking tools have functions to modify, cut or extend words and has conditional operators to skip some, etc. That makes it the most flexible, accurate and efficient attack.
+			While pure dictionary attacks use the bare passwords in a given file, rule-based attacks can generate new candidate passwords using a dictionary of passwords. In order to to do that, password cracking tools have functions to modify, cut or extend words and has conditional operators to skip some, etc. That makes it the most flexible, accurate and efficient attack. Due to the complexity of the process it uses more time and more memory for the attack.
 		\end{answer}
+	
+		\textbf{Note}: Information adopted from,  \\\url{https://hashcat.net/wiki/doku.php?id=rule_based_attack}
 		
 		\item Complete Step \#4 mentioned under \textbf{Instructions}. Add a screenshot of the mydictionary.txt and myruleset.txt file contents. Define each rule in myrulset.txt using standard rules in the rule-based attack.
 		
