only last three qs of ex 4 left

--- a/Exercise 4/180631J_A04_EN4720.tex
+++ b/Exercise 4/180631J_A04_EN4720.tex
@@ -208,19 +208,28 @@
 			\begin{figure}[H]
 				\centering
 				\includegraphics[width=0.65\columnwidth]{images/q11_1}
-				\caption{Confirming the view and write permission of the users of the friends group} \label{fig:q11_1}
+				\caption{Confirming the read and write permission of the users of the friends group} \label{fig:q11_1}
 			\end{figure}
 		\end{answer}
-		
+		\pagebreak
 		\item Recall that your other new account (\textcolor{magenta}{bob}) is not a member of the group \textcolor{ForestGreen}{friends}. Try becoming \textcolor{magenta}{bob} and repeat the previous steps. You should be able to view, but not modify, the file.
 		
 		\begin{answer}
-			%% TODO: Add answer here
-			Your answer here
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.65\columnwidth]{images/q12_1}
+			\caption{Checking the read and write permission of the user {\tt bob}} \label{fig:q12_1}
+		\end{figure}
+	
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.65\columnwidth]{images/q12_2}
+			\caption{Verifying the user {\tt bob} does not have write permission} \label{fig:q12_2}
+		\end{figure}
 		\end{answer}
 		
 		\vspace{5mm}
-		
+		\pagebreak
 		Provide analytical answers to the questions below. Screenshots are not required.
 		
 		\item What are the challenges that organizations face during the cyber security authorization process, and how can they be overcome?
