--- a/Exercise 4/180631J_A04_EN4720.tex
+++ b/Exercise 4/180631J_A04_EN4720.tex
@@ -232,18 +232,32 @@
 		\pagebreak
 		Provide analytical answers to the questions below. Screenshots are not required.
 		
-		\item What are the challenges that organizations face during the cyber security authorization process, and how can they be overcome?
+		\item What are the challenges that organizations face during the cyber security authorization process, and how can they be overcome?				
 		
 		\begin{answer}
-			%% TODO: Add answer here
-			Your answer here
+		The following answer was adopted from \url{https://www.accenture.com/us-en/blogs/security/keys-successful-access-authorization}
+		
+		Challenges and ways to overcome them:
+		\begin{itemize}
+			\item \textbf{Lack of vendor solutions} - Due to inflexibility and performance concerns of the available cyber security authorization processes, most organizations chose to build the authorization systems which best suits for their specific requirement. The growth of the number of vendor specializing in this area is a way to overcome this challenge. So that organization can select the best match for their requirements and adopt the solution accordingly.  
+
+			\item \textbf{Complexity of managing policies} - When managing authorization processes, organizations need to maintain/ update rules that determine who is allowed to access certain information and resources. This process involve, analyzing the existing complex code to identify already existing rules and reverse engineer the existing decision making (if/ else) algorithms to understand how those rules are enforced. This whole process is super complex to carry out manually.Tools with Artificial Intelligence capabilities have been built by vendors to dynamically generate and manage policies. In addition to that friendly user interfaces that hides the complexity of extensible access control markup language (XACML) has also become a grate relief.
+			
+			
+			\item \textbf{Performance and scale} - Organizations need to make sure that their systems can handle the ever increasing demands of the authorization process. However, this process involves communication between various system components which essentially can slow down the system. Focusing on modernizing applications and systems that take advantage of cloud technologies is a way to address this issue, as they often have better integration with authorization tools.
+		\end{itemize}
+		
 		\end{answer}
 		
 		\item How do different cyber security authorization frameworks differ from one another, and what are the key considerations that organizations should take into account when choosing a framework to follow?
 		
 		\begin{answer}
-			%% TODO: Add answer here
-			Your answer here
+			The following answer was adopted from \url{https://www.knowledgehut.com/blog/security/cyber-security-frameworks}
+			
+			Key considerations that organizations should take into account when choosing a framework to follow:
+			\begin{itemize}
+				\item 
+			\end{itemize}
 		\end{answer}
 		
 		\item What are the most common vulnerabilities that may be identified during the cyber security authorization process, and how can organizations address them?
